--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -27,21 +27,9 @@
   </form>
 {{/if}}
 
-<div class='comments'>
-  {{#each post.comments}}
-    <section class='comment'>
-      <div class='meta'>
-        {{user.username}}
-        on
-        {{created_at}}
-      </div>
-      <div class='text'>
-        {{comment_text}}
-      </div>
-    </section>
-  {{/each}}
-  {{#if loggedIn}}
-    <script src='/javascript/comment.js'></script>
-    <script src='/javascript/upvote.js'></script>
-  {{/if}}
-</div>
+{{> comments post.comments}}
+
+{{#if loggedIn}}
+  <script src='/javascript/comment.js'></script>
+  <script src='/javascript/upvote.js'></script>
+{{/if}}
